Fri Jun 18 11:56:09 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Update_Plan.cpp:
        * DnC/RepositoryManager/Update_Plan.h:

          Helper files to update the deployment plan from the package
          configuration IDL data structure.

          Made changes to follow DOC group standard of never a function
          more than a page.

Fri Jun 18 09:36:13 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html:

	  Updated the file with a link to Win32 zip files for the Utility
	  library.

Thu Jun 17 16:59:21 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/RepositoryManager.mpc:
        * DnC/RepositoryManager/Repository_Manager.cpp:
        * DnC/RepositoryManager/Update_Plan.cpp:
        * DnC/RepositoryManager/Update_Plan.h:

          Moved all the plan handler helper functions to a new
          file Update_Plan.cpp.

Thu Jun 17 16:02:16 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.cpp:
	  Added one in. () to the debug call.

	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp
	* DnC/NodeApplicationManager/ImplementationInfo.cpp
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* DnC/RepositoryManager/Repository_Manager.cpp
	* DnC/ciao/Deployment_Core.idl
	* DnC/ciao/NodeApplication_Impl.cpp
	* DnC/ciao/NodeApplication_Impl.h
	  Added the support for ComponentIOR. Also adjusted the start
	  process which is essential to BasicSP.

Thu Jun 17 16:00:01 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/tests/Config_Handlers/HUDisplay/Airframe.cid:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe_Exec.iad:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe_Stub.iad:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe_Svnt.iad:
        * DnC/tests/Config_Handlers/HUDisplay/GPS.cid:
        * DnC/tests/Config_Handlers/HUDisplay/GPS_Exec.iad: