@@ -9,8 +9,11 @@
 #include "hello_exec_export.h"
 #include "tao/LocalObject.h"
 
+namespace hello_example
+{
+
 class HelloWorld_Impl :
-  public virtual CCM_HelloWorld,
+  public virtual HelloWorld_Exec,
   public virtual TAO_Local_RefCounted_Object
 {
 public:
@@ -20,15 +23,42 @@ public:
   /// Default dtor.
   ~HelloWorld_Impl ();
 
+  // Operations from Components::SessionComponent
+  virtual void set_session_context (Components::SessionContext_ptr ctx
+				    ACE_ENV_ARG_DECL_WITH_DEFAULTS)
+    ACE_THROW_SPEC ((CORBA::SystemException,
+		     Components::CCMException));
+
+  virtual void ciao_preactivate (ACE_ENV_SINGLE_ARG_DECL)
+    ACE_THROW_SPEC ((CORBA::SystemException,
+		     Components::CCMException));
+
+  virtual void ccm_activate (ACE_ENV_SINGLE_ARG_DECL_WITH_DEFAULTS)
+    ACE_THROW_SPEC ((CORBA::SystemException,
+		     Components::CCMException));
+
+  virtual void ciao_postactivate (ACE_ENV_SINGLE_ARG_DECL)
+    ACE_THROW_SPEC ((CORBA::SystemException,
+		     Components::CCMException));
+
+  virtual void ccm_passivate (ACE_ENV_SINGLE_ARG_DECL_WITH_DEFAULTS)
+    ACE_THROW_SPEC ((CORBA::SystemException,
+		     Components::CCMException));
+
+  virtual void ccm_remove (ACE_ENV_SINGLE_ARG_DECL_WITH_DEFAULTS)
+    ACE_THROW_SPEC ((CORBA::SystemException,
+		     Components::CCMException));
+
   virtual char *sayhello (const char *username
                           ACE_ENV_ARG_DECL_WITH_DEFAULTS)
-    ACE_THROW_SPEC ((
-      CORBA::SystemException
-    ));
+    ACE_THROW_SPEC ((CORBA::SystemException));
+
+protected:
+  HelloWorld_Exec_Context_var context_;
 };
 
 class HelloHome_Impl :
-  public virtual CCM_HelloHome,
+  public virtual HelloHome_Exec,
   public virtual TAO_Local_RefCounted_Object
 {
 public:
@@ -47,6 +77,7 @@ public:
 // We still need to figure out a way to clean up the object created by
 // the factory correctly.   Like we did in ACE_FACTORY macro, with a
 // Gobbler function.
+}
 
 extern "C" HELLO_EXEC_Export ::Components::HomeExecutorBase_ptr
 createHelloHome_Impl (void);
